# operative0

./: CMakeLists.txt  main.c
include/: error.h  forms.h  root_forms.h  seq.h  string_utils.h
include/string/: pred.h  string.h
src/: error.c  forms.c  main.c  root_forms.c  string_utils.c
src/string/: pred.c  string.c
